[package]
authors = ["Fantour Developers"]
description = ""
edition = "2018"
license = "Unlicense"
name = "hello-substrate"
version = "1.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate packages
frame-support = { default-features = false, version = "3.0.0", path = "../../frame/support" }
frame-system = { default-features = false, version = "3.0.0", path = "../../frame/system" }
sp-runtime = { default-features = false, version = "3.0.0", path = "../../primitives/runtime" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-io = { version = "3.0.0", path = "../../primitives/io" }
sp-core = { version = "3.0.0", path = "../../primitives/core" }

[features]
default = ["std"]
std = [
	"codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
]
