[package]
authors = ["Fantour Developers"]
description = ""
edition = "2018"
license = "Unlicense"
name = "simple-map"
version = "1.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate packages
frame-support = { default-features = false, version = "3.0.0", path = "../../frame/support" }
frame-system = { default-features = false, version = "3.0.0", path = "../../frame/system" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-io = { version = "3.0.0", path = "../../primitives/io" }
sp-core = { version = "3.0.0", path = "../../primitives/core" }
sp-runtime = { version = "3.0.0", path = "../../primitives/runtime" }

[features]
default = ["std"]
std = [
	"codec/std",
    "frame-support/std",
    "frame-system/std",
]
