[package]
name = "fantour-rpc-runtime-api"
version = "3.0.0"
authors = ["Fantour Developers"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "3.0.0", default-features = false, path = "../../../../primitives/api" }
sp-std = { version = "3.0.0", default-features = false, path = "../../../../primitives/std" }
sp-core = { version = "3.0.0", default-features = false, path = "../../../../primitives/core" }
fantour-nft = { version = "3.0.0", default-features = false, path = "../../../fantour-nft" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
	"fantour-nft/std",
]
